<resources>
    <string name="app_name">RecipeGenius</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_filters">Filters</string>
    <string name="title_myRecipes">MyRecipes</string>
    <string name="title_todaysPicks">TodaysPicks</string>
    <string name="title_recipePage">RecipePage</string>
    <string name="weight_goal">WeightGoal</string>
    <string name="mealplan_goals">MealPlanGoals</string>
    <string name="hands_free_Preference">HandsFree</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>