<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_top_home">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.recipegenius.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.recipegenius.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_todays_picks"
        android:name="com.example.recipegenius.ui.todayspicks.TodaysPicksFragment"
        android:label="@string/title_todaysPicks"
        tools:layout="@layout/fragment_todayspicks" />

    <fragment
        android:id="@+id/navigation_recipe_page"
        android:name="com.example.recipegenius.ui.recipepage.RecipePageFragment"
        android:label="@string/title_recipePage"
        tools:layout="@layout/fragment_recipepage" />

    <navigation android:id="@+id/navigation_top_home"
        app:startDestination="@id/navigation_home">
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.recipegenius.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" >
            <action
                android:id="@+id/action_navigation_home_to_navigation_filters2"
                app:destination="@id/navigation_filters" />
        </fragment>
        <fragment
            android:id="@+id/navigation_filters"
            android:name="com.example.recipegenius.ui.filters.FiltersFragment"
            android:label="@string/title_filters"
            tools:layout="@layout/fragment_filters" />
        <fragment
            android:id="@+id/navigation_my_recipes"
            android:name="com.example.recipegenius.ui.myrecipes.MyRecipesFragment"
            android:label="@string/title_myRecipes"
            tools:layout="@layout/fragment_myrecipes" />
    </navigation>
</navigation>